make https part of rest_endpoint

--- a/roles/snow-rest-message/tasks/main.yml
+++ b/roles/snow-rest-message/tasks/main.yml
@@ -37,7 +37,7 @@
               basic_auth_profile: mytower_creds
               use_mutual_auth: false 
               name: Ansible Tower Demo
-              rest_endpoint: "{{ lookup('env', 'TOWER_HOST') }}/api/v2/job_templates/SNOW-Demo-Compliance-Fix/launch/"
+              rest_endpoint: "https://{{ lookup('env', 'TOWER_HOST') }}/api/v2/job_templates/SNOW-Demo-Compliance-Fix/launch/"
             return_content: yes 
             status_code: 201 
           register: message 
